--- a/app/build.gradle
+++ b/app/build.gradle
@@ -79,7 +79,7 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation"org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
     implementation 'com.android.support:appcompat-v7:27.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     testImplementation 'junit:junit:4.12'
@@ -135,6 +135,9 @@ dependencies {
 //    implementation deps.retrofit.runtime
 //    implementation deps.retrofit.gson
 
+    testCompile 'org.mockito:mockito-core:2.7.6'
+
+
     compile 'com.squareup.retrofit2:retrofit:2.3.0'//retrofit
     compile 'com.google.code.gson:gson:2.6.2'//Gson 库
 //下面两个是RxJava 和RxAndroid
@@ -147,5 +150,8 @@ dependencies {
 
     compile 'com.scwang.smartrefresh:SmartRefreshLayout:1.0.5.1'
     implementation 'com.android.support:recyclerview-v7:27.1.0'
+    implementation 'com.android.support:cardview-v7:27.1.0'
+
+
 }
 
