--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,13 +15,6 @@ versions.arch_core = "1.1.0"
 versions.room = "1.1.0-alpha1"
 versions.lifecycle = "1.1.0"
 
-def room = [:]
-room.runtime = "android.arch.persistence.room:runtime:$versions.room"
-room.compiler = "android.arch.persistence.room:compiler:$versions.room"
-room.rxjava2 = "android.arch.persistence.room:rxjava2:$versions.room"
-room.testing = "android.arch.persistence.room:testing:$versions.room"
-deps.room = room
-
 def lifecycle = [:]
 lifecycle.runtime = "android.arch.lifecycle:runtime:$versions.lifecycle"
 lifecycle.extensions = "android.arch.lifecycle:extensions:$versions.lifecycle"
@@ -36,8 +29,6 @@ retrofit.mock = "com.squareup.retrofit2:retrofit-mock:$versions.retrofit"
 deps.retrofit = retrofit
 deps.okhttp_logging_interceptor = "com.squareup.okhttp3:logging-interceptor:${versions.okhttp_logging_interceptor}"
 
-deps.rxjava2 = "io.reactivex.rxjava2:rxjava:$versions.rxjava2"
-deps.rx_android = "io.reactivex.rxjava2:rxandroid:$versions.rx_android"
 
 
 android {
@@ -58,6 +49,7 @@ android {
     }
 
     packagingOptions {
+
         exclude 'META-INF/DEPENDENCIES.txt'
         exclude 'META-INF/NOTICE'
         exclude 'META-INF/NOTICE.txt'
@@ -86,66 +78,26 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
 
-//    // ViewModel and LiveData
-//    implementation "android.arch.lifecycle:extensions:1.1.0"
-//    // alternatively, just ViewModel
-//    implementation "android.arch.lifecycle:viewmodel:1.1.0"
-//    // alternatively, just LiveData
-//    implementation "android.arch.lifecycle:livedata:1.1.0"
-//
-//    annotationProcessor "android.arch.lifecycle:compiler:1.1.0"
-//
-//    // Room (use 1.1.0-alpha3 for latest alpha)
-//    implementation "android.arch.persistence.room:runtime:1.0.0"
-//    kapt "android.arch.persistence.room:compiler:1.0.0"
-//
-//    // Paging
-//    implementation "android.arch.paging:runtime:1.0.0-alpha6"
-//
-//    // Test helpers for LiveData
-//    testImplementation "android.arch.core:core-testing:1.1.0"
-//
-//    // Test helpers for Room
-//    testImplementation "android.arch.persistence.room:testing:1.0.0"
-//
-//
-//    implementation "android.arch.persistence.room:rxjava2:1.0.0"
-//    implementation "io.reactivex.rxjava2:rxandroid:2.0.1"
-//
-//    // ReactiveStreams support for LiveData
-//    implementation "android.arch.lifecycle:reactivestreams:1.1.0"
-//
-//    compile 'com.squareup.retrofit2:retrofit:2.0.2'
-//    compile 'com.squareup.retrofit2:converter-gson:2.0.2'
-//    compile 'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0'
-//    compile 'com.squareup.okhttp3:logging-interceptor:3.2.0'
-//
-//    compile 'com.github.littlejigege:suger:v0.0.8.5'
+
 
     implementation deps.lifecycle.runtime
     implementation deps.lifecycle.extensions
     kapt deps.lifecycle.compiler
-    implementation deps.room.runtime
-    kapt deps.room.compiler
-    implementation deps.room.rxjava2
 
-    // RxJava
-//    implementation deps.rx_android
-//    implementation deps.rxjava2
-//    implementation deps.retrofit.runtime
-//    implementation deps.retrofit.gson
-
+    implementation "android.arch.persistence.room:rxjava2:1.0.0"
+    implementation "android.arch.persistence.room:runtime:1.0.0"
+    kapt "android.arch.persistence.room:compiler:1.0.0"
     testCompile 'org.mockito:mockito-core:2.7.6'
 
 
     compile 'com.squareup.retrofit2:retrofit:2.3.0'//retrofit
-    compile 'com.google.code.gson:gson:2.6.2'//Gson 库
+    compile 'com.google.code.gson:gson:2.8.2'//Gson 库
 //下面两个是RxJava 和RxAndroid
-    compile 'io.reactivex:rxjava:1.3.0'
-    compile 'io.reactivex:rxandroid:1.1.0'
+    compile 'io.reactivex.rxjava2:rxjava:2.1.10'
+    compile 'io.reactivex.rxjava2:rxandroid:2.0.2'
     compile 'com.squareup.retrofit2:converter-gson:2.3.0'//转换器，请求结果转换成Model
-    compile 'com.squareup.retrofit2:adapter-rxjava:2.3.0'//配合Rxjava 使用
-
+//    compile 'com.squareup.retrofit2:adapter-rxjava:2.3.0'//配合Rxjava 使用
+    compile 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
     compile 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.30'
 
     compile 'com.scwang.smartrefresh:SmartRefreshLayout:1.0.5.1'
